---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/duplicate_type_parameter_names.py
---
## AST

```
Module(
    ModModule {
        range: 0..169,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    range: 0..22,
                    name: Name(
                        ExprName {
                            range: 5..10,
                            id: Name("Alias"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 10..16,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 11..12,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 11..12,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 14..15,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 14..15,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: EllipsisLiteral(
                        ExprEllipsisLiteral {
                            range: 19..22,
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    range: 23..45,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 27..28,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 28..34,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 29..30,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 29..30,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 32..33,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 32..33,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    parameters: Parameters {
                        range: 34..40,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 35..39,
                                parameter: Parameter {
                                    range: 35..39,
                                    name: Identifier {
                                        id: Name("t"),
                                        range: 35..36,
                                    },
                                    annotation: Some(
                                        Name(
                                            ExprName {
                                                range: 38..39,
                                                id: Name("T"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 42..45,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 42..45,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    range: 46..64,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("C"),
                        range: 52..53,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 53..59,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 54..55,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 54..55,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 57..58,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 57..58,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 61..64,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 61..64,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    range: 65..132,
                    name: Name(
                        ExprName {
                            range: 70..75,
                            id: Name("Alias"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 75..126,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 76..77,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 76..77,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 79..85,
                                        name: Identifier {
                                            id: Name("U"),
                                            range: 79..80,
                                        },
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    range: 82..85,
                                                    id: Name("str"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 87..102,
                                        name: Identifier {
                                            id: Name("V"),
                                            range: 87..88,
                                        },
                                        bound: Some(
                                            Tuple(
                                                ExprTuple {
                                                    range: 90..102,
                                                    elts: [
                                                        Name(
                                                            ExprName {
                                                                range: 91..94,
                                                                id: Name("str"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            ExprName {
                                                                range: 96..101,
                                                                id: Name("bytes"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                    parenthesized: true,
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 104..107,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 105..107,
                                        },
                                        default: None,
                                    },
                                ),
                                ParamSpec(
                                    TypeParamParamSpec {
                                        range: 109..112,
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 111..112,
                                        },
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 114..125,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 114..115,
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    range: 118..125,
                                                    id: Name("default"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: EllipsisLiteral(
                        ExprEllipsisLiteral {
                            range: 129..132,
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    range: 133..154,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 137..138,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 138..147,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 139..140,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 139..140,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 142..143,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 142..143,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 145..146,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 145..146,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    parameters: Parameters {
                        range: 147..149,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 151..154,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 151..154,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | type Alias[T, T] = ...
  |               ^ Syntax Error: duplicate type parameter
2 | def f[T, T](t: T): ...
3 | class C[T, T]: ...
  |


  |
1 | type Alias[T, T] = ...
2 | def f[T, T](t: T): ...
  |          ^ Syntax Error: duplicate type parameter
3 | class C[T, T]: ...
4 | type Alias[T, U: str, V: (str, bytes), *Ts, **P, T = default] = ...
  |


  |
1 | type Alias[T, T] = ...
2 | def f[T, T](t: T): ...
3 | class C[T, T]: ...
  |            ^ Syntax Error: duplicate type parameter
4 | type Alias[T, U: str, V: (str, bytes), *Ts, **P, T = default] = ...
5 | def f[T, T, T](): ...  # two errors
  |


  |
2 | def f[T, T](t: T): ...
3 | class C[T, T]: ...
4 | type Alias[T, U: str, V: (str, bytes), *Ts, **P, T = default] = ...
  |                                                  ^^^^^^^^^^^ Syntax Error: duplicate type parameter
5 | def f[T, T, T](): ...  # two errors
  |


  |
3 | class C[T, T]: ...
4 | type Alias[T, U: str, V: (str, bytes), *Ts, **P, T = default] = ...
5 | def f[T, T, T](): ...  # two errors
  |          ^ Syntax Error: duplicate type parameter
  |


  |
3 | class C[T, T]: ...
4 | type Alias[T, U: str, V: (str, bytes), *Ts, **P, T = default] = ...
5 | def f[T, T, T](): ...  # two errors
  |             ^ Syntax Error: duplicate type parameter
  |
